5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1708_3068.log
== TEST (2019-04-29 14:05:38) 
-- CODE:
x=input("CIMITARRA/KATANA/SABRE")
D=float(input("destreza:"))
S=int(input("valores sorteados:"))
if not(1<S<10)or(x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE"):
	print("Entrada Invalida")

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:05:50) 
-- CODE:
x=input()
D=float(input("destreza:"))
S=int(input("valores sorteados:"))
if not(1<S<10)or(x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE"):
	print("Entrada Invalida")

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:06:06) 
-- CODE:
x=input()
D=float(input("destreza:"))
S=int(input("valores sorteados:"))
if not(1<S<10)or(x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE"):
	print("Entrada Invalida")

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:09:24) 
-- CODE:
x=input()
D=float(input("destreza:"))
S=float(input("valores sorteados:"))
if not(1<S<10)or(x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE"):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.192033
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada Invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada Invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada Invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:09:50) 
-- CODE:
x=input()
D=float(input("destreza:"))
S=float(input("valores sorteados:"))
if not(1<S<10)or(x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE"):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:10:26) 
-- CODE:
x=input()
D=float(input("destreza:"))
S=float(input("valores sorteados:"))
if not(1<S<10)or(x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE"):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:11:41) 
-- CODE:
x=input().upper()
D=float(input("destreza:"))
S=float(input("valores sorteados:"))
if not(1<S<10)or(x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE"):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:14:04) 
-- CODE:
x=input().upper()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if not(1<S<10)or(x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE"):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:14:38) 
-- CODE:
x=input()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if not(1<S<10)or(x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE"):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:15:48) 
-- CODE:
x=input()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if not(1<S<10)or(x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(D<0):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:16:00) 
-- CODE:
x=input()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if not(1<S<10)or(x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(D<0):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:16:27) 
-- CODE:
x=input()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if not((1<S<10))or(x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(D<0):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:16:50) 
-- CODE:
x=input()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if not((1<S<10))or(x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(D<0):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:17:07) 
-- CODE:
x=input()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if not((1<S<10))or(x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(D<0):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.280661
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada Invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada Invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada Invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:18:31) 
-- CODE:
x=input()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if (x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(D<0)or(S<1)or(S>10):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.144514
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada Invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada Invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada Invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:18:32) 
-- CODE:
x=input()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if (x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(D<0)or(S<1)or(S>10):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:19:31) 
-- CODE:
x=input().upper()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if (x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(D<0)or(S<1)or(S>10):
	print("Entrada Invalida")
else:	
   if(x=="CIMITARRA"):
	print(2*S+2*D)
   elif(x=="KATANA"):
	print(2*S+D)
	elif(x=="SABRE"):
	print(S+2*D)

-- ERROR:
File "XXXX", line 10
    print(2*S+2*D)
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:20:57) 
-- CODE:
x=input().upper()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if (x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(D<0)or(S<1)or(S>10):
	print("Entrada Invalida")
else:	
   if(x=="CIMITARRA"):
	print(2*S+2*D)
	else:
		if(x=="KATANA"):
			print(2*S+D)
		else:
			if(x=="SABRE"):
				print(S+2*D)

-- ERROR:
File "XXXX", line 10
    print(2*S+2*D)
                 ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:21:47) 
-- CODE:
x=input().upper()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if (x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(D<0)or(S<1)or(S>10):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:24:33) 
-- CODE:
x=input().upper()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if (x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(D<0)or(S<2)or(S>20)or(d1<1)or(d1>10)or(d2<1)or(d2>10):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada Invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:44:05) 
-- CODE:
x=input().upper()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- ERROR:
File "XXXX", line 6
    if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10):
                                                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:44:06) 
-- CODE:
x=input().upper()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- ERROR:
File "XXXX", line 6
    if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10):
                                                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:44:15) 
-- CODE:
x=input().upper()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10)):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
23.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:44:31) 
-- CODE:
x=input().upper()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10)):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.176113
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23.0
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20.0
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:45:04) 
-- CODE:
x=input().upper()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10)):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
23.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:45:15) 
-- CODE:
x=input().upper()
D=float(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10)):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
23.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:46:02) 
-- CODE:
x=input().upper()
D=int(input("destreza:")
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10)):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- ERROR:
File "XXXX", line 3
    d1=int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:46:07) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10)):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:46:19) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10)):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.131635
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:46:27) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10)):
	print("Entrada Invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:46:47) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.166406
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
destreza:valor sorteado1:valor sorteado2: 52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:46:54) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:47:05) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.184903
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:48:07) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10))or(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.178975
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:48:10) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10))or(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:48:39) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10))and(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.134846
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:48:42) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and(d1>10)or(d2>10))and(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:49:30) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10))and(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.200775
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:49:31) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10))and(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.16116
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:49:54) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or((d1<1)or(d2<1))and((d1>10)or(d2>10))and(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.203989
-- ERROR:
  File "/home/codebench/codes/1708/3068/main.py", line 6
    if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or((d1<1)or(d2<1))and((d1>10)or(d2>10))and(D<0):
                                                                                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:49:55) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or((d1<1)or(d2<1))and((d1>10)or(d2>10))and(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- ERROR:
File "XXXX", line 6
    if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or((d1<1)or(d2<1))and((d1>10)or(d2>10))and(D<0):
                                                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:50:18) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and((d1>10)or(d2>10))and(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.158391
-- ERROR:
  File "/home/codebench/codes/1708/3068/main.py", line 6
    if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and((d1>10)or(d2>10))and(D<0):
                                                                                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:50:19) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and((d1>10)or(d2>10))and(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.146706
-- ERROR:
  File "/home/codebench/codes/1708/3068/main.py", line 6
    if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and((d1>10)or(d2>10))and(D<0):
                                                                                                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:50:19) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and((d1>10)or(d2>10))and(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- ERROR:
File "XXXX", line 6
    if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and((d1>10)or(d2>10))and(D<0):
                                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:50:20) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and((d1>10)or(d2>10))and(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- ERROR:
File "XXXX", line 6
    if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)and((d1>10)or(d2>10))and(D<0):
                                                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:51:09) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.211651
-- ERROR:
  File "/home/codebench/codes/1708/3068/main.py", line 6
    if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0):
                                                                                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:51:19) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.202338
-- ERROR:
  File "/home/codebench/codes/1708/3068/main.py", line 6
    if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0):
                                                                                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:51:21) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.170089
-- ERROR:
  File "/home/codebench/codes/1708/3068/main.py", line 6
    if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0):
                                                                                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:51:31) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.131829
-- ERROR:
  File "/home/codebench/codes/1708/3068/main.py", line 6
    if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0):
                                                                                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:51:31) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.138716
-- ERROR:
  File "/home/codebench/codes/1708/3068/main.py", line 6
    if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0):
                                                                                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:52:03) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.175962
-- ERROR:
  File "/home/codebench/codes/1708/3068/main.py", line 6
    if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0):
                                                                                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:52:05) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- ERROR:
File "XXXX", line 6
    if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0):
                                                                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:52:17) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.157168
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:52:17) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:52:46) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATANA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.223445
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:53:24) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE"))or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.13122
-- ERROR:
  File "/home/codebench/codes/1708/3068/main.py", line 6
    if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE"))or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
                                                                                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:53:24) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE"))or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- ERROR:
File "XXXX", line 6
    if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE"))or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
                                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:53:47) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")and(x!="KATANA")and(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:54:30) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATNA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:54:31) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATNA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.137577
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:54:32) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATNA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.15399
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:54:32) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATNA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.163578
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:54:33) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATNA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.208147
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:54:55) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATNA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- EXECUTION TIME:
0.134987
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:54:56) 
-- CODE:
x=input().upper()
D=int(input("destreza:"))
d1=int(input("valor sorteado1:"))
d2=int(input("valor sorteado2: "))
S= d1+d2
if((x!="CIMITARRA")or(x!="KATNA")or(x!="SABRE")or(d1<1)or(d2<1)or(d1>10)or(d2>10)or(D<0)):
	print("Entrada invalida")
elif(x=="CIMITARRA"):
	print(2*S+2*D)
elif(x=="KATANA"):
	print(2*S+D)
elif(x=="SABRE"):
	print(S+2*D)

-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
